tests/int/snapshots/r#mod__int__use_command__module_cli_flags_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - cli
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
*
cli
consts::BUILD_TARGET
consts::BUILD_TIMESTAMP
consts::BUILD_USER
consts::CARGO_BIN_NAME
consts::CARGO_PKG_HOMEPAGE
consts::LONG_VERSION_MESSAGE
consts::SDK_VERSION
consts::VERSION_MESSAGE

----- stderr -----
