tests/int/snapshots/r#mod__int__use_command__module_collector.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - collector
---
success: true
exit_code: 0
----- stdout -----
expansion::is_test_module
resolver::{find_submodule, get_src_dir}
visitor::UseVisitor

----- stderr -----
