tests/int/snapshots/r#mod__int__use_command__module_collector_flags_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - collector
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
*
consts::DEFAULT_SRC_DIR
expansion::is_test_module
resolver::find_submodule
resolver::get_src_dir
visitor::UseVisitor

----- stderr -----
