tests/int/snapshots/r#mod__int__use_command__module_collector_flags_t_e_d_1.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - collector
    - "-t"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
*
consts
expansion
resolver
visitor

----- stderr -----
